--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,10 +4,22 @@ on:
   schedule:
     - cron: '37 19 * * *'
   workflow_dispatch:
+    ssh:
+        description: 'SSH connection to Actions'
+        required: true
+        default: 'true'
+
+
+env:
+  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_BRANCH: master
+  FEEDS_CONF: feeds.conf.default
+  UPLOAD_RELEASE: false
+  TZ: Asia/Shanghai
 
 jobs:
   update:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     container:
       image: archlinux
 
@@ -48,6 +60,16 @@ jobs:
           cd genpac
           sed 's/from collections import Callable/from collections.abc import Callable/g' -i $(grep 'from collections import Callable' . -rIl)
           python setup.py install
+
+      - name: SSH connection to Actions
+        uses: P3TERX/ssh2actions@v1.0.0
+        if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+        env:
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+
+
+
 
       - name: Update
         run: |
