--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -63,6 +63,8 @@ jobs:
 
           cp ssh_config /root/.ssh/config
           git config --global --add safe.directory "*"
+          git config user.name ${{ secrets.GIT_COMMIT_NAME }}
+          git config user.email ${{ secrets.GIT_COMMIT_EMAIL }}
 
           genpac --pac-proxy "SOCKS5 127.0.0.1:7890" --gfwlist-url - --gfwlist-local gfwlist/gfwlist.txt -o gfwlist.pac
           sed '1,7d' -i gfwlist.pac
