--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -61,17 +61,8 @@ jobs:
         run: |
           set -x
 
-          cp ssh_config /root/.ssh/config
-          git config --global --add safe.directory "*"
-          git config user.name ${{ secrets.GIT_COMMIT_NAME }}
-          git config user.email ${{ secrets.GIT_COMMIT_EMAIL }}
-
           genpac --pac-proxy "SOCKS5 127.0.0.1:7890" --gfwlist-url - --gfwlist-local gfwlist/gfwlist.txt -o gfwlist.pac
           sed '1,7d' -i gfwlist.pac
 
-          git add gfwlist.pac
-          git commit -m "[$(LANG=C date)] auto update" || exit
-
-          [ -n "${{ secrets.READ_ONLY }}" ] && git show && exit
-
-          git push origin master
+      - name: Git Auto Commit
+        uses: stefanzweifel/git-auto-commit-action@v4.14.1
