--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -55,14 +55,29 @@ jobs:
           cd genpac
           sed 's/from collections import Callable/from collections.abc import Callable/g' -i $(grep 'from collections import Callable' . -rIl)
           python setup.py install
-          
+
 
       - name: Update
         run: |
           set -x
-          git config --global --add safe.directory /__w/gfwlist2pac/gfwlist2pac
+
+          cp ssh_config /root/.ssh/config
+          git config --global --add safe.directory "*"
+          git config user.name ${{ secrets.GIT_COMMIT_NAME }}
+          git config user.email ${{ secrets.GIT_COMMIT_EMAIL }}
+
           genpac --pac-proxy "SOCKS5 127.0.0.1:7890" --gfwlist-url - --gfwlist-local gfwlist/gfwlist.txt -o gfwlist.pac
           sed '1,7d' -i gfwlist.pac
 
+          git add gfwlist.pac
+          git commit -m "[$(LANG=C date)] auto update" || exit
+
+          [ -n "${{ secrets.READ_ONLY }}" ] && git show && exit
+
+          git push origin master
+
+
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.14.1
+        with:
+          file_pattern: *.pac
