--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -60,8 +60,10 @@ jobs:
 
 
       - name: Git Auto Commit
-        uses: stefanzweifel/git-auto-commit-action@v4.14.1
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
+          repository: .
           file_pattern: "*.pac"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
