--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -57,7 +57,7 @@ jobs:
 
           genpac --pac-proxy "SOCKS5 127.0.0.1:7890" --gfwlist-url - --gfwlist-local gfwlist/gfwlist.txt -o gfwlist.pac
           sed '1,7d' -i gfwlist.pac
-
+          git config --global --add safe.directory /__w/gfwlist2pac/gfwlist2pac
 
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4
